--- a/index.html
+++ b/index.html
@@ -5,32 +5,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nerko+One&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
     <title>Summer</title>
 </head>
 
 <body>
-    <header class="p-5 d-flex justify-content-center align-items-center">
-        <h1>ESTATE &#39;24</h1>
+    <header>
+        <strong>
+            <h1 id="titolo">ESTATE &#39;24</h1>
+        </strong>
     </header>
     <main>
         <div id="row_container">
             <div class="row">
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h3>SKATE PARK</h3>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                    </div>
+                <div class="cards">
+
+                    <img src="./assets/img/skatepark.jpg" alt="skatepark">
+
+
+                    <p>01&#45;07&#45;2024</p>
+                    <h3><strong>SKATE PARK</strong></h3>
+
                 </div>
             </div>
-
         </div>
-
-
     </main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./assets/mai.js"></script>
 </body>
 
