--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
             </div>
         </div>
     </main>
-    <script src="./assets/mai.js"></script>
+    <script src="./assets/main.js"></script>
 </body>
 
 </html>
