--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/style.css">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -60,8 +59,8 @@
                         <img src="./assets/img/skatepark.jpg" alt="skatepark">
                     </div>
                     <div class="card_buttom">
-                        <p>01&#45;07&#45;2024</p>
-                        <h3><strong>SKATE PARK</strong></h3>
+                        <p class="date">01&#45;07&#45;2024</p>
+                        <h3 class="title_card"><strong>SKATE PARK</strong></h3>
                     </div>
                 </div>
             </div>
@@ -102,8 +101,8 @@
                         <img src="./assets/img/skatepark.jpg" alt="skatepark">
                     </div>
                     <div class="card_buttom">
-                        <p>01&#45;07&#45;2024</p>
-                        <h3><strong>SKATE PARK</strong></h3>
+                        <p class="date">01&#45;07&#45;2024</p>
+                        <h3 class="title_card"><strong>SKATE PARK</strong></h3>
                     </div>
                 </div>
             </div>
@@ -144,8 +143,8 @@
                         <img src="./assets/img/skatepark.jpg" alt="skatepark">
                     </div>
                     <div class="card_buttom">
-                        <p>01&#45;07&#45;2024</p>
-                        <h3><strong>SKATE PARK</strong></h3>
+                        <p class="date">01&#45;07&#45;2024</p>
+                        <h3 class="title_card"><strong>SKATE PARK</strong></h3>
                     </div>
                 </div>
             </div>
@@ -186,8 +185,8 @@
                         <img src="./assets/img/skatepark.jpg" alt="skatepark">
                     </div>
                     <div class="card_buttom">
-                        <p>01&#45;07&#45;2024</p>
-                        <h3><strong>SKATE PARK</strong></h3>
+                        <p class="date">01&#45;07&#45;2024</p>
+                        <h3 class="title_card"><strong>SKATE PARK</strong></h3>
                     </div>
                 </div>
             </div>
@@ -228,8 +227,8 @@
                         <img src="./assets/img/skatepark.jpg" alt="skatepark">
                     </div>
                     <div class="card_buttom">
-                        <p>01&#45;07&#45;2024</p>
-                        <h3><strong>SKATE PARK</strong></h3>
+                        <p class="date">01&#45;07&#45;2024</p>
+                        <h3 class="title_card"><strong>SKATE PARK</strong></h3>
                     </div>
                 </div>
             </div>
@@ -270,8 +269,8 @@
                         <img src="./assets/img/skatepark.jpg" alt="skatepark">
                     </div>
                     <div class="card_buttom">
-                        <p>01&#45;07&#45;2024</p>
-                        <h3><strong>SKATE PARK</strong></h3>
+                        <p class="date">01&#45;07&#45;2024</p>
+                        <h3 class="title_card"><strong>SKATE PARK</strong></h3>
                     </div>
                 </div>
             </div>
