--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 <body>
     <div id="overlay">
         <input id="close" type="button" value="X">
+        <div id="container_over_img">
+            <img id="over_img" src="" alt="">
+        </div>
     </div>
     <header>
         <strong>
@@ -59,7 +62,7 @@
                                 </linearGradient>
                             </defs>
                         </svg>
-                        <img src="./assets/img/skatepark.jpg" alt="skatepark">
+                        <img class="img_cards" src="./assets/img/skatepark.jpg" alt="skatepark">
                     </div>
                     <div class="card_buttom">
                         <p class="date">01&#45;07&#45;2024</p>
@@ -101,7 +104,7 @@
                                 </linearGradient>
                             </defs>
                         </svg>
-                        <img src="./assets/img/skatepark.jpg" alt="skatepark">
+                        <img class="img_cards" src="./assets/img/skatepark.jpg" alt="skatepark">
                     </div>
                     <div class="card_buttom">
                         <p class="date">01&#45;07&#45;2024</p>
@@ -143,7 +146,7 @@
                                 </linearGradient>
                             </defs>
                         </svg>
-                        <img src="./assets/img/skatepark.jpg" alt="skatepark">
+                        <img class="img_cards" src="./assets/img/skatepark.jpg" alt="skatepark">
                     </div>
                     <div class="card_buttom">
                         <p class="date">01&#45;07&#45;2024</p>
@@ -185,7 +188,7 @@
                                 </linearGradient>
                             </defs>
                         </svg>
-                        <img src="./assets/img/skatepark.jpg" alt="skatepark">
+                        <img class="img_cards" src="./assets/img/skatepark.jpg" alt="skatepark">
                     </div>
                     <div class="card_buttom">
                         <p class="date">01&#45;07&#45;2024</p>
@@ -227,7 +230,7 @@
                                 </linearGradient>
                             </defs>
                         </svg>
-                        <img src="./assets/img/skatepark.jpg" alt="skatepark">
+                        <img class="img_cards" src="./assets/img/skatepark.jpg" alt="skatepark">
                     </div>
                     <div class="card_buttom">
                         <p class="date">01&#45;07&#45;2024</p>
@@ -269,7 +272,7 @@
                                 </linearGradient>
                             </defs>
                         </svg>
-                        <img src="./assets/img/skatepark.jpg" alt="skatepark">
+                        <img class="img_cards" src="./assets/img/skatepark.jpg" alt="skatepark">
                     </div>
                     <div class="card_buttom">
                         <p class="date">01&#45;07&#45;2024</p>
